--- a/src/components/The/Header.astro
+++ b/src/components/The/Header.astro
@@ -16,7 +16,7 @@ import SvgNav from "@components/Icon/Nav.astro"
         <button class="site-button" onclick="toggleDarkMode()">
             <SvgSun/>
         </button>
-        <a class="site-button" href="https://travellings.cn/go.html" target="_blank" title="开往·友链接力">
+        <a class="site-button" href="https://space.bilibili.com/22978727" target="_blank" title="开往·友链接力">
             <SvgSubway/>
         </a>
     </div>
