--- a/src/components/View/Website.astro
+++ b/src/components/View/Website.astro
@@ -10,10 +10,29 @@ import SvgDot from '@components/Icon/Dot.astro'
         <div class="svg">
             <SvgWebsite/>
         </div>
-        <a class="code" href="https://blog.dorakika.cn/">blog.dorakika.cn</a>
-        <h3 class="heading-3">个人博客</h3>
+        <a class="code" href="https://zongyuanlu.github.io/">zongyuanlu.github.io</a>
+        <h3 class="heading-3">Welcome to my personal website~</h3>
         <p class="body">
-            使用Astro构建，主要分享前端相关的文章，偶尔记录一些生活随笔。
+            Now I am working in Xiaomi Corp. as a software developer.
+            <br>
+            <br>
+            Jul. 2022 - now, Xiaomi Corp. SDE in Smartphone dept.
+            <br>
+            <br>
+            2022年7月至今，在小米手机测试部任职软件开发工程师。
+        </p>
+        <h3 class="heading-4">Education</h3>
+        <p class="resume">
+            Aug. 2021 - Jul. 2022, City University of Hong Kong, Msc in Computer Science.
+            <br>
+            <br>
+            2021年8月至2022年7月， 香港城市大学计算机理学硕士。
+            <br>
+            <br>
+            Sept. 2017 - Jul. 2021, South China University of Technology, BEng in Information Secirity.
+            <br>
+            <br>
+            2017年9月至2021年七月，华南理工大学信息安全工学学士。
         </p>
     </section>
 </div>
