--- a/src/components/The/BaseHead/BaseHead.astro
+++ b/src/components/The/BaseHead/BaseHead.astro
@@ -12,7 +12,6 @@ export interface Props {
 }
 const isPROD = import.meta.env.PROD
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-
 const { title = "DORAKIKA", description = "", cover="", keywords="" } = Astro.props;
 ---
 
@@ -29,7 +28,7 @@ const { title = "DORAKIKA", description = "", cover="", keywords="" } = Astro.pr
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
-<meta name="keywords" content={keywords}/>
+<meta name="keywords" content={keywords}/>`
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
