--- a/src/components/View/UseTech.astro
+++ b/src/components/View/UseTech.astro
@@ -4,53 +4,34 @@ import Icon from "@components/Icon/Icon.astro";
 ---
 <section id="use-tech">
     <h2 class="title">Use</h2>
-    <h3>开发</h3>
+    <h3>Development</h3>
     <div class="card-container">
+        <IconLink text="Python" icon_bg="rgba(0, 122, 204, 0.1)">
+            <Icon name="Python"/>
+        </IconLink>
         <IconLink text="TypeScript" icon_bg="rgba(0, 122, 204, 0.1)">
             <Icon name="TypeScript"/>
         </IconLink>
-        <IconLink text="Vue.js" icon_bg="rgba(65, 184, 131, 0.1)">
-            <Icon name="Vue"/>
+        <IconLink href="" text="Java" icon_bg="rgba(221, 75, 37, 0.1)">
+            <Icon name="Java"/>
         </IconLink>
-        <IconLink href="" text="Astro" icon_bg="rgb(255, 93, 1,0.1)">
-            <Icon name="Astro"/>
+        <IconLink text="Android" icon_bg="rgba(33, 150, 243, 0.1)">
+            <Icon name="Android"/>
         </IconLink>
-        <IconLink href="" text="HTML5" icon_bg="rgba(221, 75, 37, 0.1)">
-            <Icon name="HTML5"/>
-        </IconLink>
-        <IconLink text="CSS3" icon_bg="rgba(33, 150, 243, 0.1)">
-            <Icon name="CSS3"/>
-        </IconLink>
-        <IconLink text="JavaScript" icon_bg="rgba(244, 222, 81, 0.2)">
-            <Icon name="JavaScript"/>
-        </IconLink>
-        <IconLink href="" text="Node.js" icon_bg="rgba(111, 166, 96, 0.1)">
-            <Icon name="Node.js"/>
+        <IconLink text="Linux" icon_bg="rgba(244, 222, 81, 0.2)">
+            <Icon name="Linux"/>
         </IconLink>
     </div>
-    <h3>工具</h3>
+    <h3>Tools</h3>
     <div class="card-container">
         <IconLink text="VS Code" icon_bg="rgba(0, 122, 204, 0.1)">
             <Icon name="VsCode" />
         </IconLink>
-        <IconLink text="Master Go" icon_bg="rgba(57, 112, 227, 0.1)">
-            <Icon name="MasterGo"/>
+        <IconLink text="Docker" icon_bg="rgba(0, 122, 204, 0.1)">
+            <Icon name="Docker"/>
         </IconLink>
-        <IconLink text="Obsidian" icon_bg="rgba(108, 86, 204,0.1)">
-            <Icon name="Obsidian"/>
-        </IconLink>
-        <IconLink text="Cron" icon_bg="rgba(255, 71, 0, 0.1)">
-            <Icon name="Cron"/>
-        </IconLink>
-    </div>
-
-    <h3>服务</h3>
-    <div class="card-container">
         <IconLink text="Github" href="https://github.com/DORAKIKA">
             <Icon name="Github"/>
-        </IconLink>
-        <IconLink text="Vercel" href="https://vercel.com/dashboard">
-            <Icon name="Vercel"/>
         </IconLink>
     </div>
 </section>
