--- a/src/components/The/Header.astro
+++ b/src/components/The/Header.astro
@@ -24,6 +24,10 @@ import SvgNav from "@components/Icon/Nav.astro"
 <script is:inline>
 function toggleDarkMode(){
     document.documentElement.classList.toggle('dark')
+};
+
+function toggleLightMode(){
+    document.documentElement.classList.toggle('light')
 }
 </script>
 
