--- a/src/components/View/UseTech.astro
+++ b/src/components/View/UseTech.astro
@@ -12,7 +12,7 @@ import Icon from "@components/Icon/Icon.astro";
         <IconLink text="TypeScript" icon_bg="rgba(0, 122, 204, 0.1)">
             <Icon name="TypeScript"/>
         </IconLink>
-        <IconLink href="" text="Java" icon_bg="rgba(221, 75, 37, 0.1)">
+        <IconLink href="Java" text="Java" icon_bg="rgba(221, 75, 37, 0.1)">
             <Icon name="Java"/>
         </IconLink>
         <IconLink text="Android" icon_bg="rgba(33, 150, 243, 0.1)">
