--- a/src/components/View/Website.astro
+++ b/src/components/View/Website.astro
@@ -19,7 +19,7 @@ import SvgDot from '@components/Icon/Dot.astro'
             Jul. 2022 - now, Xiaomi Corp. SDE in Smartphone dept.
             <br>
             <br>
-            2022年7月至今，在小米手机测试部任职软件开发工程师。
+            2022年7月至今，在小米手机测试部任职工具开发。
         </p>
         <h3 class="heading-4">Education</h3>
         <p class="resume">
