--- a/src/components/View/UseTech.astro
+++ b/src/components/View/UseTech.astro
@@ -12,7 +12,7 @@ import Icon from "@components/Icon/Icon.astro";
         <IconLink text="TypeScript" icon_bg="rgba(0, 122, 204, 0.1)">
             <Icon name="TypeScript"/>
         </IconLink>
-        <IconLink href="Java" text="Java" icon_bg="rgba(221, 75, 37, 0.1)">
+        <IconLink text="Java" icon_bg="rgba(221, 75, 37, 0.1)">
             <Icon name="Java"/>
         </IconLink>
         <IconLink text="Android" icon_bg="rgba(33, 150, 243, 0.1)">
@@ -30,8 +30,18 @@ import Icon from "@components/Icon/Icon.astro";
         <IconLink text="Docker" icon_bg="rgba(0, 122, 204, 0.1)">
             <Icon name="Docker"/>
         </IconLink>
-        <IconLink text="Github" href="https://github.com/DORAKIKA">
+        <IconLink text="Github" href="https://github.com/zongyuanlu">
             <Icon name="Github"/>
+        </IconLink>
+    </div>
+
+    <h3>Frameworks</h3>
+    <div class="card-container">
+        <IconLink text="React" icon_bg="rgba(0, 122, 204, 0.1)">
+            <Icon name="React" />
+        </IconLink>
+        <IconLink text="Robot Framework" icon_bg="rgba(0, 122, 204, 0.1)">
+            <Icon name="Robot" />
         </IconLink>
     </div>
 </section>
